--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -93,5 +93,14 @@
       "registerBtn": "Зарегистрироваться",
       "registerGoogle": "Зарегистрироваться через Google"
     }
+  },
+  "toast": {
+    "loginRequired": "Войдите, чтобы завершить бронирование",
+    "bookingError": "Произошла ошибка при бронировании.",
+    "fillCardDetails": "Пожалуйста, заполните все данные карты",
+    "paymentSuccess": "Оплата прошла успешно! Спасибо за бронирование.",
+    "bookingSuccess": "Бронирование успешно создано",
+    "bookingCancelled": "Бронирование успешно отменено",
+    "error": "Произошла ошибка"
   }
 }
